--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 /* CUSTOM-PROPS */
 :root {
   --text-color: #333;
+  --accent-color-green: #0a775f;
+  --outline-color: var(--accent-color-green)
 }
 
 @font-face {
@@ -64,6 +66,11 @@ img {
   height: auto;
 }
 
+*:focus {
+  outline: 2px dashed var(--outline-color);
+  outline-offset: 3px;
+}
+
 /* CONTAINER */
 
 .container {
@@ -81,12 +88,87 @@ img {
   flex-grow: 1;
 }
 
+/* SITE-HEADER-INTRO-WRAPPER */
 
-.site-skill-field {
-  display: grid;
-  grid-template-columns: auto;
+.site-header-hero-wrapper {
+  background-image: url(../img/site-hero-intro-bg.jpg);
 }
 
-.site-skill-item {
-  border: 2px solid tomato;
+/* SITE-HEADER */
+.site-header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.site-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.site-header-logo-link {
+  display: flex;
+  text-decoration: none;
+}
+
+.site-header-logo-link:hover {
+  opacity: 0.8;
+}
+
+.site-header-logo-link:active {
+  opacity: 0.6;
+}
+
+.site-header-logo-img {
+  width: 235px;
+  height: 24px;
+  object-fit: contain;
+}
+
+/* SITENAV */
+
+.sitenav-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sitenav-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.sitenav-link {
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: normal;
+  color: var(--text-color);
+}
+
+.sitenav-link:hover {
+  color: var(--accent-color-green);
+}
+
+.sitenav-link:active {
+  opacity: 0.6;
+}
+
+/* RETINA BG */
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) { 
+  .site-header-hero-wrapper {
+    background-image: url(../img/site-hero-intro-bg@2x.jpg);
+  }
+
 }
