Add index-collection section

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --accent-color-light--80: rgba(201, 155, 103, 0.8);
   --accent-color-light--60: rgba(201, 155, 103, 0.6);
   --light-brown: #f3d7b7;
+  --light-bg: #f8f8f2;
   --outline-color: var(--accent-color-green)
 }
 
@@ -122,6 +123,8 @@ img {
 
 .main-content {
   flex-grow: 1;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 /* SITE-HEADER-INTRO-WRAPPER */
@@ -242,6 +245,76 @@ img {
   height: 696px;
 }
 
+/* INDEX-COLLECTION */
+
+.index-collection-inner { 
+  background-color: var(--light-bg);
+  background-image: url(../img/index-collection-bg.jpg);
+  padding: 50px 143px;
+}
+
+.index-collection-heading {
+  margin-top: 0;
+  margin-bottom: 80px;
+  font-size: 50px;
+  line-height: normal;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.index-collection-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.index-collection-item {
+  display: flex;
+  align-items: center;
+}
+
+.index-collection-item:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.index-collection-img {
+  width: 450px;
+  height: 375px;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.index-collection-info {
+  flex-grow: 1;
+}
+
+.index-collection-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.index-collection-text {
+  font-size: 22px;
+  line-height: 34px;
+}
+
+.index-collection-text:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.index-collection-item:nth-child(odd) .index-collection-info {
+  padding-left: 117px;
+}
+
+.index-collection-item:nth-child(even) .index-collection-info {
+  padding-right: 117px;
+}
+
 /* RETINA BG */
 
 @media
@@ -253,6 +326,10 @@ only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) { 
   .site-header-hero-wrapper {
     background-image: url(../img/site-hero-intro-bg@2x.jpg);
+  }
+
+  .index-collection-inner { 
+    background-image: url(../img/index-collection-bg.jpg);
   }
 
 }
