--- a/css/styles.css
+++ b/css/styles.css
@@ -410,18 +410,81 @@ img {
   padding: 50px 30px;
   background-color: var(--accent-color-green);
   background-image: url(../img/green-bg-min.jpg);
+  text-align: center;
 }
+
 .how-it-works-heading {
+  font-size: 50px;
+  line-height: normal;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 80px;
 }
+
 .how-it-works-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 60px;
+  list-style: none;
+  margin-left: -20px;
+  text-align: left;
+  counter-reset: how-it-works;
 }
+
 .how-it-works-item {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 3 - 20px);
+  margin-left: 20px;
+  counter-increment: how-it-works;
 }
+
+.how-it-works-item::before {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 20px;
+  border: 4px solid var(--accent-color-light-brown);
+  background-color: var(--light-bg);
+  content: '';
+}
+
 .how-it-works-info {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 20px 20px 40px;
+  background-color: var(--light-bg);
 }
+
+.how-it-works-info::before {
+  align-self: flex-end;
+  margin-bottom: 45px;
+  font-size: 64px;
+  line-height: normal;
+  content: '0'counter(how-it-works);
+}
+
 .how-it-works-step-title {
+  max-width: 250px;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 40px;
+  line-height: normal;
+  font-weight: 500;
+  text-transform: uppercase;
 }
+
 .how-it-works-text {
+  margin: 0;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.how-it-works-cta:focus {
+  outline-color: var(--accent-color-light-brown);
 }
 
 /* RETINA BG */
